welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:10: error: not found: value compteur
  if (compteur > 2){
      ^Poucet:12: error: not found: value compteur
    compteur=0
    ^Poucet:17: error: not found: value compteur
    compteur=0
    ^